--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.9.2",
     "node-fetch": "^3.2.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
