eslint rules for prettier endofline is now set to auto

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,10 @@
         "react"
     ],
     "rules": {
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "prettier/prettier": 
+        [ "error", {
+            "endOfLine": "auto"}
+        ]
     }
 }
