--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
+    "firebase": "^9.9.3",
     "prop-types": "^15.8.1",
     "rc-progress": "^3.4.0",
     "react": "^18.2.0",
