--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.9.3",
+    "ga-4-react": "^0.1.281",
     "prop-types": "^15.8.1",
     "rc-progress": "^3.4.0",
     "react": "^18.2.0",
