--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-
-REACT_APP_API_KEY='AIzaSyDs-rxvOLmskYhudQWPOxl-whELlKKUYhs',
+REACT_APP_API_KEY=gh_xxxxxxxx...,
+REACT_APP_FIRBASE_API_KEY='AIzaSyDs-rxvOLmskYhudQWPOxl-whELlKKUYhs',
 REACT_APP_AUTHDOMAIN="issue-finder.firebaseapp.com",
 REACT_APP_PROJECTID='issue-finder',
 REACT_APP_STORAGEBUCKET='issue-finder.appspot.com',
