changed repository list url

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
 REACT_APP_API_KEY=gh_xxxxxxxx...
+# add/change 'REACT_APP_REPOS_LIST_URL' key only if you want to host repositories list json somewhere else
+REACT_APP_REPOS_LIST_URL=https://raw.githubusercontent.com/shadmanhere/ycombinator_githubs/main/06_repos.json
 REACT_APP_FIRBASE_API_KEY='AIzaSyDs-rxvOLmskYhudQWPOxl-whELlKKUYhs'
 REACT_APP_AUTHDOMAIN="issue-finder.firebaseapp.com"
 REACT_APP_PROJECTID='issue-finder'
