--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,11 @@
 REACT_APP_API_KEY=gh_xxxxxxxx...
 # add/change 'REACT_APP_REPOS_LIST_URL' key only if you want to host repositories list json somewhere else
 REACT_APP_REPOS_LIST_URL=https://raw.githubusercontent.com/shadmanhere/ycombinator_githubs/main/06_repos.json
-REACT_APP_FIRBASE_API_KEY='AIzaSyDs-rxvOLmskYhudQWPOxl-whELlKKUYhs'
-REACT_APP_AUTHDOMAIN="issue-finder.firebaseapp.com"
-REACT_APP_PROJECTID='issue-finder'
-REACT_APP_STORAGEBUCKET='issue-finder.appspot.com'
-REACT_APP_MSG_SENDERID='918268898722'
-REACT_APP_APPID='1:918268898722:web:653b04454a9eee41d896fb'
-REACT_APP_MEASUREMENTID='G-C28740E7D5'
+REACT_APP_FIRBASE_API_KEY=AIzaSyDs-rxvOLmskYhudQWPOxl-whELlKKUYhs
+REACT_APP_AUTHDOMAIN=issue-finder.firebaseapp.com
+REACT_APP_PROJECTID=issue-finder
+REACT_APP_STORAGEBUCKET=issue-finder.appspot.com
+REACT_APP_MSG_SENDERID=918268898722
+REACT_APP_APPID=1:918268898722:web:653b04454a9eee41d896fb
+REACT_APP_MEASUREMENTID=G-C28740E7D5
  
