feat: add github auth

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
 REACT_APP_API_KEY=gh_xxxxxxxx...
+REACT_APP_APP_GITHUB_CLIENT_ID=xxxxxxx
+REACT_APP_GITHUB_REDIRECT_URI=http://localhost:3000
 # add/change 'REACT_APP_REPOS_LIST_URL' key only if you want to host repositories list json somewhere else
 REACT_APP_REPOS_LIST_URL=https://raw.githubusercontent.com/shadmanhere/ycombinator_githubs/main/06_repos.json
 REACT_APP_FIRBASE_API_KEY=AIzaSyDs-rxvOLmskYhudQWPOxl-whELlKKUYhs
